package Creational.FactoryMethod.Ex1;

public enum PizzaType {
  HAI_SAN,CHAY,DUA
}
